# winidjango

./: .gitignore  Containerfile  README.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: configure.sh  settings.json
.github/workflows/: build.yaml  build.yml  deploy.yml  health_check.yaml  health_check.yml  release.yaml  release.yml
docs/: api.md  commands.md  db.md  index.md
src/winidjango/: __init__.py
src/winidjango/core/: __init__.py
src/winidjango/core/commands/: import_data.py
src/winidjango/core/commands/base/: base.py
src/winidjango/core/db/: bulk.py  models.py  sql.py
src/winidjango/rig/configs/: pyproject.py
src/winidjango/rig/tools/: tools.py
tests/: models.py
tests/test_winidjango/: __init__.py
tests/test_winidjango/test_core/test_commands/: test_import_data.py
tests/test_winidjango/test_core/test_commands/test_base/: test_base.py
tests/test_winidjango/test_core/test_db/: test_bulk.py  test_fields.py  test_models.py  test_sql.py
tests/test_winidjango/test_dev/test_configs/: test_configs.py
tests/test_winidjango/test_rig/test_configs/: test_configs.py  test_pyproject.py
tests/test_winidjango/test_rig/test_tools/: test_tools.py
tests/test_winidjango/test_src/test_commands/: test_import_data.py
tests/test_winidjango/test_src/test_commands/test_base/: test_base.py
tests/test_winidjango/test_src/test_db/: test_bulk.py  test_fields.py  test_models.py  test_sql.py
winidjango/: __init__.py
winidjango/dev/configs/: configs.py
winidjango/rig/configs/: configs.py
winidjango/rig/tools/: tools.py
winidjango/src/commands/: import_data.py
winidjango/src/commands/base/: base.py
winidjango/src/db/: bulk.py  models.py
