[project]
name = "winidjango"
version = "3.1.2"
description = "A utility package for django"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-stubs-ext>=6.0.6",
    "polars>=1.42.1",
    "pyrig>=16.0.0",
    "pyrig-runtime>=1.0.0",
    "winiutils>=3.0.0",
]
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "pyrig",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.scripts]
winidjango = "pyrig_runtime.rig.cli.main:main"

[project.urls]
Homepage = "https://github.com/Winipedia/winidjango"
Documentation = "https://Winipedia.github.io/winidjango"
Source = "https://github.com/Winipedia/winidjango"
Issues = "https://github.com/Winipedia/winidjango/issues"
Changelog = "https://github.com/Winipedia/winidjango/releases"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "django-stubs>=6.0.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "pip-audit>=2.10.1",
    "prek>=0.4.6",
    "pyrig>=16.0.0",
    "pyrig-pypi>=2.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "rumdl>=0.2.27",
    "ty>=0.0.56",
    "types-defusedxml>=0.7.0.20260504",
    "types-tqdm>=4.68.0.20260608",
    "typos>=1.48.0",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff]
exclude = [
    "**/migrations/*.py",
]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D203",
    "D213",
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",
]

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
files = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=winidjango --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.ty.terminal]
error-on-warning = true

[tool.bandit.assert_used]
skips = [
    "*/tests/*.py",
    "*/test_*/*.py",
]

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig-runtime",
]
