[project]
name = "winidjango"
version = "4.1.6"
description = "A utility package for django"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-stubs-ext>=6.0.6",
    "polars>=1.42.1",
    "pyrig>=18.3.4",
    "pyrig-runtime>=3.5.2",
    "winiutils>=4.1.3",
]
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "pyrig",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.scripts]
winidjango = "pyrig_runtime.rig.cli.main:main"

[project.urls]
Homepage = "https://github.com/Winipedia/winidjango"
Documentation = "https://Winipedia.github.io/winidjango"
Source = "https://github.com/Winipedia/winidjango"
Issues = "https://github.com/Winipedia/winidjango/issues"
Changelog = "https://github.com/Winipedia/winidjango/releases"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "detect-secrets>=1.5.0",
    "django-stubs>=6.0.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.5",
    "pip-audit>=2.10.1",
    "prek>=0.4.8",
    "pyrig>=18.3.4",
    "pyrig-pypi>=3.1.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.21",
    "rumdl>=0.2.30",
    "ty>=0.0.58",
    "types-defusedxml>=0.7.0.20260504",
    "types-tqdm>=4.68.0.20260608",
    "typos>=1.48.0",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff]
exclude = [
    "**/migrations/*.py",
]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pytest]
testpaths = [
    "tests",
]
addopts = [
    "--cov=winidjango",
    "--cov-branch",
    "--cov-fail-under=90",
    "--cov-report=term-missing:skip-covered",
]
filterwarnings = [
    "error",
]
strict = true

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig-runtime",
]
