[project]
name = "winidjango"
version = "4.14.0"
description = "A utility package for django"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = [
  "LICENSE",
]
authors = [
  { name = "Winipedia" },
]
maintainers = [
  { name = "Winipedia" },
]
keywords = [
  "pyrig",
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "django>=6.0.7",
  "django-stubs-ext>=6.0.6",
  "polars>=1.42.1",
  "pyrig>=18.3.4",
  "pyrig-runtime>=3.5.2",
  "winiutils>=4.1.3",
]

[project.urls]
Changelog = "https://github.com/Winipedia/winidjango/releases"
Documentation = "https://Winipedia.github.io/winidjango"
Homepage = "https://github.com/Winipedia/winidjango"
Issues = "https://github.com/Winipedia/winidjango/issues"
Source = "https://github.com/Winipedia/winidjango"

[project.scripts]
winidjango = "pyrig_runtime.rig.cli.main:main"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "deptry>=0.25.1",
  "detect-secrets>=1.5.0",
  "django-stubs>=6.0.6",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocs-mermaid2-plugin>=1.2.3",
  "mkdocstrings[python]>=1.0.5",
  "pip-audit>=2.10.1",
  "pre-commit-hooks",
  "prek>=0.4.8",
  "pyrig>=18.3.4",
  "pyrig-pypi>=3.1.2",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pytest-django>=4.12.0",
  "pytest-mock>=3.15.1",
  "pytest-randomly",
  "ruff>=0.15.21",
  "rumdl>=0.2.30",
  "ryl",
  "shellcheck-py",
  "shfmt-py",
  "tombi",
  "ty>=0.0.58",
  "types-defusedxml>=0.7.0.20260504",
  "types-tqdm>=4.68.0.20260608",
  "typos>=1.48.0",
]

[build-system]
requires = [
  "uv-build",
]
build-backend = "uv_build"

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "pyrig-runtime",
]

[tool.pytest]
addopts = [
  "--cov-branch",
  "--cov-fail-under=90",
  "--cov-report=term-missing:skip-covered",
  "--cov=winidjango",
]
filterwarnings = [
  "error",
]
strict = true
testpaths = [
  "tests",
]

[tool.ruff]
exclude = [
  "**/migrations/*.py",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
